--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Python Developer","WebDeveloper","Data Analyst","Youtuber"],
+      strings: ["Python Developer","WebDeveloper","Data Analyst","AI and ML fresher"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
