--- a/projects/blog.html
+++ b/projects/blog.html
@@ -47,8 +47,8 @@
 
             <ul>
               <li><strong>My Portfolio</strong>:  Bootstrap, HTML, CSS,Java script</li>
-                <li><strong>Website URL</strong>: <a href="https://r-tharunreddy.github.io/My_Portfolio/#portfolio" target="_blank">Link</a></li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/R-TharunReddy/My_Portfolio" target="_blank">Project Link</a></li>
+                <li><strong>Website URL</strong>: <a href="https://gopi456.github.io/My_Portfolio-main/#portfolio" target="_blank">Link</a></li>
+              <li><strong>Github URL</strong>: <a href="https://github.com/Gopi456/My_Portfolio-main.git" target="_blank">Project Link</a></li>
             </ul>
 
             <p>
